[package]
name = "sound-quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
meilisearch-sdk = "0.22.0"
regex = "1.7.1"
# remove link to libc with "rustls-tls"
reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
tokio = { version = "1.26.0", features = ["full"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
